Use the same Rubocop version as code climate

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -9,9 +9,6 @@ engines:
     config:
       languages:
       - ruby
-      - javascript
-      - python
-      - php
   fixme:
     enabled: true
   rubocop:
@@ -20,16 +17,8 @@ ratings:
   paths:
   - Gemfile.lock
   - "**.erb"
-  - "**.haml"
+  - "**.html"
   - "**.rb"
-  - "**.rhtml"
-  - "**.slim"
-  - "**.inc"
-  - "**.js"
-  - "**.jsx"
-  - "**.module"
-  - "**.php"
-  - "**.py"
 exclude_paths:
 - config/
 - db/
